--- a/style.css
+++ b/style.css
@@ -2,6 +2,27 @@
 
 *{
     margin: 0;
-    paddin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px 100px 0;
+    background: linear-gradient(to bottom, #d509a0, #ff606e);
+}
+
+section:before {
+    content: 'ZOOMX';
+    position: absolute;
+    font-size: 20vw;
+    color: rgba(0,0,0,0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 900;
+    margin-top: 20vh;
 }
