--- a/style.css
+++ b/style.css
@@ -27,6 +27,27 @@ section:before {
     margin-top: 20vh;
 }
 
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 40px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
 .logo img {
-    
+    max-width: 100px;
+}
+
+.toggle {
+    width: 30px;
+    height: 30px;
+    background: url('images/menu.png');
+    background-size: 30px;
+    cursor: pointer;
+    background-position: center;
+    background-repeat: no-repeat;
 }
