--- a/style.css
+++ b/style.css
@@ -51,3 +51,32 @@ header {
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.content {
+    position: relative;
+    width: 100%;
+    margin-top: 40px;
+}
+
+.content .imgBx {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.content .imgBx img {
+    max-width: 100%;
+}
+
+.content .text {
+    max-width: 700px;
+    margin-top: 20px;
+}
+
+.content .text h2 {
+    color: #fff;
+    font-size: 2.5em;
+    font-weight: 800;
+    text-transform: uppercase;
+}
