--- a/style.css
+++ b/style.css
@@ -96,3 +96,23 @@ header {
     letter-spacing: 2px;
     margin-top: 15px;
 }
+
+.sci {
+    position: absolute;
+    bottom: 50px;
+    right: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    filter: invert(1);
+}
+
+.sci li {
+    list-style: none;
+}
+
+.sci li a {
+    display: block;
+    transform: scale(0.7);
+}
