Gave styles for header to make it responsive.

--- a/style.css
+++ b/style.css
@@ -116,3 +116,10 @@ header {
     display: block;
     transform: scale(0.7);
 }
+
+@media (max-width: 767px) {
+    header {
+       padding: 20px 40px; 
+    }
+    
+}
